--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
   /* work */
   --items-work: 3;
   /* cubic-bezier */
-  --transition-timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-timing-function: 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   --transition-timing-function-close: 550ms cubic-bezier(0.4, 0, 0.2, 1);
   /* scrol */
   --colot-track :inset 0 0 5px grey; 
@@ -992,25 +992,30 @@ margin-right: 30px;
   transition: border-color
   var(--transition-timing-function),
   background-color var(--transition-timing-function);
+
+  background-image: url(../img/check.svg);
+
+  background-repeat:no-repeat;
+
+  background-size: cover;
+
+  /* background-position: center; */
 }
 
 .consent-checkbox:checked + .consent-consent-mail-checkbox {
   border-color: transparent;
 
   background-color: var(--accent-color);
-  background-image: url(../img/check.svg);
+  /* background-image: url(../img/check.svg); */
 
   background-size: contain;
   background-origin: border-box;
-
-  border: 2px solid var(--accent-color);
 
 }
 
 .consent-checkbox:hover + .consent-consent-mail-checkbox {
 
   border: 2px solid var(--accent-color);
-
 }
 
 .modal{
@@ -1239,6 +1244,7 @@ margin-right: 30px;
   background-color: currentColor;
 
 }
+
 
 .register-btn-person{
   position: absolute;
