--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ margin-bottom: 50px;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
@@ -627,7 +627,7 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.25;
 
   display: flex;
   align-items: center;
@@ -728,7 +728,7 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
@@ -917,7 +917,7 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 28px;
+  line-height: 1.55;
 
   letter-spacing: 0.03em;
 
@@ -977,7 +977,6 @@ margin-right: 30px;
   pointer-events: none;
 } 
 
-
 .consent-consent-mail-checkbox {
   display: inline-block;
 
@@ -999,14 +998,12 @@ margin-right: 30px;
 
   background-size: cover;
 
-  /* background-position: center; */
 }
 
 .consent-checkbox:checked + .consent-consent-mail-checkbox {
   border-color: transparent;
 
   background-color: var(--accent-color);
-  /* background-image: url(../img/check.svg); */
 
   background-size: contain;
   background-origin: border-box;
@@ -1116,7 +1113,7 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.15;
 
   text-align: center;
   justify-content: center;
@@ -1165,12 +1162,12 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: var(--primary-text-color);
 
-  transform: translateY(-120%);
+  transform: translateY(-130%);
 
 }
 /* !------------------------------------- */
@@ -1197,8 +1194,8 @@ margin-right: 30px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 10px;
-  line-height: 14px;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: red;
@@ -1276,7 +1273,7 @@ margin-right: 30px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
 
   letter-spacing: 0.03em;
 
@@ -1313,15 +1310,20 @@ margin-right: 30px;
 
 }
 
-
 .register-btn-person{
   position: absolute;
 
   width: 18px;
   height: 18px;
 
-  margin: 11px 13px
+  left: 12px;
+  top: 50%;
+
+  transform: translateY(-50%);
+
+  padding-left:3px;
 }
+
 
 .consent-btn-svg{
   align-items: center;
@@ -1376,7 +1378,7 @@ margin-right: 30px;
 
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.87;
   
   letter-spacing: 0.06em;
 }
