--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@
   --button-hover-button-box-shadow-btn: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   --collor-subscribe-input: #4caf50;
+  --modal-btn-no-eror:rgb(95, 212, 41);
+  --register-eror-text:rgba(230, 11, 11, 0.5);
 
 /* advantages */
   --items-adv: 4;
@@ -1188,17 +1190,20 @@ margin-right: 30px;
 
 .register-eror-text{
 
-  right: 70px;
-  bottom: -13px;
+  right: 50px;
+  top: 50%;
+  
+  transform: translateY(-50%);
 
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
-  color: red;
+  color: var(--register-eror-text);
+
   opacity: 0;
 
   transition: color var(--transition-timing-function);
@@ -1220,7 +1225,7 @@ margin-right: 30px;
   right: 10px;
   bottom: 13px;
 
-  fill: red;
+  fill: var(--emphasizing-cardcolor);
   opacity: 0;
 
   transition: fill var(--transition-timing-function);
@@ -1233,7 +1238,8 @@ margin-right: 30px;
   right: 10px;
   bottom: 13px;
 
-  fill: rgb(95, 212, 41);
+  fill: var(--modal-btn-no-eror);
+
   opacity: 0;
 
   transition: fill var(--transition-timing-function);
