--- a/css/style.css
+++ b/css/style.css
@@ -1323,8 +1323,10 @@ margin-right: 30px;
 .register-btn-person{
   position: absolute;
 
-  /* width: 18px;
-  height: 18px; */
+  display: flex;
+
+  width: 18px;
+  height: 18px;
 
   left: 12px;
   top: 50%;
@@ -1333,6 +1335,19 @@ margin-right: 30px;
 
   transition: fill var(--accent-colorn);
 
+  justify-content: center;
+  align-items: center;
+
+}
+
+.register-form-user .phone-icon {
+  width: 13px;
+  height: 13px;
+}
+
+.register-form-user .envelope-icon {
+  width: 15px;
+  height: 12px;
 }
 
 
